--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ h1 {
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
   color: floralwhite;
-  margin-bottom: 30px;
+  margin-bottom: -30%;
 }
 
 .app:before{
