--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ h1 {
   background: url('./background/mountsunset.jpg')no-repeat center center/cover;
   position: absolute;
   width: 100%;
-  height: 120%;
+  height: 100vh;
   top: 0;
   left: 0;
   z-index: -1;
