--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+<style> @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap'); </style>
 
 * {
   box-sizing: border-box;
