--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-<style> @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap'); </style>
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
 * {
   box-sizing: border-box;
