--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ h1 {
 
 .app:before{
   content: '';
-  background: url('./background/mountsunset.jpg')no-repeat center center/cover;
+  background: url('./background/sunsetwall.jpg')no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100vh;
