--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 .app{
   width: 100%;
-  height: 20vh;
+  height: 10vh;
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
   color: floralwhite;
@@ -85,6 +85,10 @@ h1 {
   padding: 1rem;
   border-radius: 12px;
   background-color: rgb(239, 219, 153,0.5);
+}
+
+.description {
+  padding
 }
 
 .bold{
