--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 .app{
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
   color: floralwhite;
@@ -87,8 +87,8 @@ h1 {
   background-color: rgb(239, 219, 153,0.5);
 }
 
-.app .bottom .description {
-  padding: 70px;
+.app .bottom .humidity {
+  padding-top: 70px;
 }
 
 .bold{
