--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,11 @@ h1 {
 }
 
 .app .bottom .humidity {
-  padding-top: 70px;
+  padding-top: 30px;
+}
+
+.app .bottom .wind {
+  padding-top: 30px;
 }
 
 .bold{
